--- a/css/styles.css
+++ b/css/styles.css
@@ -15,17 +15,17 @@ font-weight: 700;
 font-size: 26px;
 line-height: 1.19;
 letter-spacing: 0.03em;
-color: #2196F3;
+color: #212121;
 
 }
 
 .logo:hover,
 .logo:focus {
-   
+   color: #2196F3;
 }
 
-.studio {
-    color: #212121;
+.web {
+    color: #2196F3;
 }
 
 .list {
